--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "db:init": "node app/scripts/init-db.js",
     "db:reset": "rm -f database.sqlite && npm run db:init"
   },
@@ -32,11 +32,11 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
-    "next": "15.3.8",
+    "next": "16.1.6",
     "next-auth": "^4.24.11",
-    "react": "^19.0.0",
+    "react": "19.2.4",
     "react-calendar": "^6.0.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.2.4",
     "react-window": "^1.8.11",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
@@ -50,15 +50,19 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3",
     "@types/react-window": "^1.8.8",
     "@types/webpack": "^5.28.5",
     "autoprefixer": "^10.4.21",
     "eslint": "9.32.0",
-    "eslint-config-next": "15.4.4",
+    "eslint-config-next": "16.1.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3"
   }
 }
