--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
-    "next": "16.1.6",
-    "next-auth": "^4.24.11",
+    "next": "^15.5.11",
+    "next-auth": "^4.24.13",
     "react": "19.2.4",
     "react-calendar": "^6.0.0",
     "react-dom": "19.2.4",
