--- a/package.json
+++ b/package.json
@@ -54,9 +54,15 @@
     "@types/react-dom": "19.2.3",
     "@types/react-window": "^1.8.8",
     "@types/webpack": "^5.28.5",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "9.32.0",
-    "eslint-config-next": "16.1.6",
+    "eslint": "^9.32.0",
+    "eslint-config-next": "^16.1.6",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
